feat: 게시글 작성, 최근 게시글, 인기 게시글 조회 기능 보완 (#15)
* refactor : PurposeRepository Package 변경

* refactor : Branch 패키지 변경

* refactor : TeamRecruitment 패키지 변경

* feat : Region 생성 (백엔드가 이를 제공해야 해서 패키지 분리 후, VO 까지 생성)

* feat : 게시글 쓰기에 필요한 응답에 필요한 Response 정의

* feat : 정적 팩토리 메서드 및 디미터 법칙 적용ㄴ

* feat : 게시글 작성 시 필요한 정보들을 한번에 넘기는 API 구현

* feat : 협업 방식 validation 추가

* feat : 게시글 작성에 Auth 추가

* refactor : 게스트가 게시글을 조회할 수 있도록 리팩토링

* refactor : MemberResponse 실제 값들로 수정

* faet : 최근 게시글 조회, 인기있는 게시글 조회 페이지네이션 적용

* refactor : Exception 명 변경

* refactor : getById 사용

* refactor : 어색한 네이밍 수정

* fix : 중복 ideas 제거

* refactor : 의존성을 고려해 패키지 위치 변경